[gd_scene load_steps=6 format=3 uid="uid://blvn2a1umjmgr"]

[ext_resource type="PackedScene" uid="uid://c1xw2ywgml5ml" path="res://inventory_system/scenes/ui/ui_window.tscn" id="1"]
[ext_resource type="FontFile" uid="uid://c2wbhmvt6pm3k" path="res://inventory_system/resources/font/Arcadepix Plus.ttf" id="2"]
[ext_resource type="Script" path="res://inventory_system/scripts/ui/player_stats_window.gd" id="3"]
[ext_resource type="Resource" path="res://inventory_system/data/resources/player_data.tres" id="4"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="player_stats" instance=ExtResource("1")]
offset_right = 24.0
offset_bottom = 16.0
script = ExtResource("3")
player_data = ExtResource("4")

[node name="close" parent="title" index="0"]
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 9.0
offset_bottom = 9.0

[node name="lbl_title" parent="title" index="1"]
text = "Stats"

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="str" type="HBoxContainer" parent="VBoxContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/str" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "- Strength -"

[node name="lbl_str" type="Label" parent="VBoxContainer/str" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "0"

[node name="dex" type="HBoxContainer" parent="VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/dex" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "- Dexterity -"

[node name="lbl_dex" type="Label" parent="VBoxContainer/dex" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "0"

[node name="int" type="HBoxContainer" parent="VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/int" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "- Inteligence -"

[node name="lbl_int" type="Label" parent="VBoxContainer/int" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "0"

[node name="vit" type="HBoxContainer" parent="VBoxContainer" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/vit" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "- Vitality -"

[node name="lbl_vit" type="Label" parent="VBoxContainer/vit" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "0"

[node name="msp" type="HBoxContainer" parent="VBoxContainer" index="4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/msp" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "- Move Speed -"

[node name="lbl_move_speed" type="Label" parent="VBoxContainer/msp" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_fonts/font = SubResource("1")
text = "0"
